# daq-standalone

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.txt
config/: template-daq.toml  template-daq.toml~
data/: WC_proto_0001.h5  WC_proto_0002.h5  WC_proto_0003.h5  WC_proto_0004.h5  WC_proto_0006.h5  WC_proto_0015.h5  WC_proto_0016.h5  WC_proto_0018.h5
main/: CMakeLists.txt  CMakeLists.txt~  GAGG-DAQ.cpp  GAGG-DAQ.cpp~
src/: Bridge.cpp  Bridge.cpp_org  Bridge.cpp~  Bridge.h  Bridge.h~  CMakeLists.txt  CMakeLists.txt~  Digitizer.cpp  Digitizer.cpp_ok  Digitizer.cpp_org  Digitizer.cpp~  Digitizer.h  Digitizer.h~  HDF5Writer.cpp  HDF5Writer.cpp~  HDF5Writer.hpp  HDF5Writer.hpp~  VMEBridge.h  VMEBridge.h~
toml/: CMakeLists.txt  CMakeLists.txt~
utils/: CMakeLists.txt  Config.cpp  Config.h  Log.cpp  Log.h
